delete semantic ui due to css conflict

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.9.8",
     "pug": "2.0.0-beta11",
-    "serve-favicon": "~2.4.5",
+    "serve-favicon": "^2.4.5",
     "summernote": "^0.8.10"
   }
 }
