--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "async-error-catcher": "^1.0.1",
+    "bcrypt": "^3.0.2",
     "body-parser": "~1.18.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
@@ -19,6 +20,9 @@
     "mongoose-paginate": "^5.0.3",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.9.8",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
     "serve-favicon": "^2.4.5",
     "summernote": "^0.8.10"
