--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "froala-editor": "^2.9.1",
     "method-override": "^2.3.10",
     "moment": "^2.19.1",
     "mongoose": "^4.12.4",
