--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "scripts": {
     "start": "nodemon ./bin/www"
   },
-
   "engines": {
-    "node" : "8.12.0"
+    "node": "8.12.0"
   },
   "dependencies": {
     "async-error-catcher": "^1.0.1",
@@ -15,6 +14,7 @@
     "body-parser": "~1.18.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "cool-ascii-faces": "^1.3.4",
     "debug": "~2.6.9",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
