--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "async-error-catcher": "^1.0.1",
     "bcrypt": "^3.0.2",
-    "body-parser": "~1.18.2",
+    "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "cool-ascii-faces": "^1.3.4",
     "debug": "~2.6.9",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
     "froala-editor": "^2.9.1",
     "method-override": "^2.3.10",
@@ -27,8 +27,13 @@
     "node-sass-middleware": "0.9.8",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "passport-google": "^0.3.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0",
+    "passport-kakao": "0.0.5",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
+    "request": "^2.88.0",
     "serve-favicon": "^2.4.5",
     "summernote": "^0.8.10"
   }
